[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/Resources/Clearing 4.png" type="Texture" id=2]
[ext_resource path="res://src/Resources/Arcaniea (1).png" type="Texture" id=3]
[ext_resource path="res://src/Resources/IMG-7737 (2).png" type="Texture" id=4]
[ext_resource path="res://src/Scripts/Control.gd" type="Script" id=5]
[ext_resource path="res://src/Scripts/Arcaniea_dialogue_1.gd" type="Script" id=6]
[ext_resource path="res://src/Resources/Acoustic Band - LOOP - Monday Office - Live.wav" type="AudioStream" id=7]

[node name="Arcaniea Scene 1" type="Node2D"]
position = Vector2( -8, -8 )

[node name="Clearing4" type="Sprite" parent="."]
position = Vector2( 536, 352 )
scale = Vector2( 0.587054, 0.662109 )
texture = ExtResource( 2 )

[node name="1" type="Position2D" parent="."]
position = Vector2( 320, 600 )

[node name="2" type="Position2D" parent="."]
position = Vector2( 648, 600 )

[node name="3" type="Position2D" parent="."]
position = Vector2( 1088, 584 )

[node name="4" type="Position2D" parent="."]
position = Vector2( 1408, 584 )

[node name="Dialogue" type="Node2D" parent="."]
position = Vector2( 1408, 584 )
script = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Arcaniea" type="Sprite" parent="Control"]
position = Vector2( 208, 280 )
scale = Vector2( 1.31149, 1.56428 )
texture = ExtResource( 3 )

[node name="MC" type="Sprite" parent="Control"]
position = Vector2( 800, 448 )
scale = Vector2( 0.750827, 0.473214 )
texture = ExtResource( 4 )

[node name="TextBox" type="ColorRect" parent="Control"]
anchor_right = 1.4
anchor_bottom = 0.5
margin_left = 88.0
margin_top = 408.0
margin_right = 912.0
margin_bottom = 588.0
color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextBox"]
margin_left = 40.0
margin_top = 24.0
margin_right = 848.0
margin_bottom = 184.0
theme = ExtResource( 1 )
bbcode_enabled = true

[node name="Tween" type="Tween" parent="Control/TextBox"]

[node name="Label" type="Label" parent="Control/TextBox"]
margin_left = 56.0
margin_top = -24.0
margin_right = 224.0
margin_bottom = 32.0
theme = ExtResource( 1 )
text = "Name"
align = 1
valign = 1

[node name="Button1" type="Button" parent="Control"]
anchor_left = -0.913
anchor_top = 2.322
anchor_right = -0.913
anchor_bottom = 2.322
margin_left = 385.52
margin_top = -5.88
margin_right = 714.52
margin_bottom = 72.12
theme = ExtResource( 1 )
text = "Choice 1"

[node name="Button2" type="Button" parent="Control"]
margin_left = 348.0
margin_top = 193.0
margin_right = 685.0
margin_bottom = 272.0
theme = ExtResource( 1 )
text = "Choice 2"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -7, 11 )
stream = ExtResource( 7 )
volume_db = -19.36
autoplay = true

[node name="mainMenuButton" type="Button" parent="."]
margin_left = 823.0
margin_top = 19.0
margin_right = 1023.0
margin_bottom = 79.0
text = "Main Menu"

[connection signal="tween_completed" from="Control/TextBox/Tween" to="Control" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="Control/Button1" to="Control" method="_on_Button1_pressed"]
[connection signal="pressed" from="Control/Button2" to="Control" method="_on_Button2_pressed"]
[connection signal="button_up" from="mainMenuButton" to="Control" method="_on_mainMenuButton_button_up"]
